SERVER-16748 Don't allow a new heartbeat reconfig to start until we've cleared all state from the previous one